network_policy/daemon.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  namespace: demos
  name: daemons-demo
spec:
  template:
    metadata:
      labels:
        demo: daemons
    spec:
      nodeSelector:
        beta.kubernetes.io/instance-type: m3.medium
      containers:
      - name: hostname
        image: gcr.io/google_containers/serve_hostname:1.1
