network_policy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: demos
  name: daemon-demo
spec:
  ports:
  - port: 9376
    protocol: TCP
    targetPort: 9376
  selector:
    demo: daemons
